fixed visibility

--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -238,12 +238,12 @@
 
     position: absolute;
     width: 1300px;
-    height: 500px;
     left: 70px;
     top: 500px;
 
     background: #FEF9F9;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
 }
 
 /*pay calculator main image*/
